--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 selenium = "^4.15.2"
-chromedriver-autoinstaller = {path = "lib/chromedriver_auto_installer", develop = true}
+chromedriver-auto-installer = {path = "lib/chromedriver_auto_installer"}
 
 
 [build-system]
